# cx-web

./: .env  .env.example  .gitignore  .replit  CLAUDE.md  LICENSE  README.md  REPLIT_UI_PROMPT.md  design_guidelines.md  launch-brief.md  multi-user-stress-test.sh  package-lock.json  package.json  replit.md  run_sapiens.py  sapiens.service  stress-test-cx-hire-mock.sh  vercel.json
.claude/: settings.local.json
.github/: CODEOWNERS  copilot-instructions.md
attached_assets/: Pasted--APPL-1765398279144_1765398279145.txt  Pasted--Analyze-the-current-website-thoroughly-and-provide-a-c_1765301559422.txt  Pasted--CORTEX-LINUX-Open-Source-Hackathon-2026-AI-Powered-Pac_1767703588942.txt  Pasted--Cortex-Linux-Announces-Global-AI-Hackathon-for-Develop_1768229717458.txt  Pasted--Cortex-Linux-Blog-Full-Audit-Verdict-1-Content-quality_1767183849934.txt  Pasted--I-found-the-real-data-The-repository-has-25-stars-and-_1768258636969.txt  Pasted--News-Press-Releases-Official-announcements-product-mil_1768229682438.txt  Pasted--Objective-Build-a-reusable-comparison-page-system-for-_1768232259447.txt  Pasted--Objective-Build-a-server-side-Bounties-Board-for-Corte_1768235199474.txt  Pasted--RECOMMENDED-REMOVALS-CLEANUPS-1-Repeated-code-blocks-f_1765308933801.txt  Pasted--Replit-Agent-Prompt-Cortex-Linux-Landing-Page-FAQ-Copy-Paste-This-Into-Replit-Agent--1763336591701_1763336591701.txt  Pasted--Replit-Progress-Update-Next-Steps-What-s-Already-Built-Good-News-Based-on-the-Replit--1763336729948_1763336729949.txt  Pasted--THE-AI-NATIVE-OPERATING-SYSTEM-Linux-that-understands-_1765306315707.txt  Pasted--workspace-Drop-all-tables-and-recreate-npx-drizzle-kit_1768479135246.txt  Pasted-1-Add-Analytics-this-is-step-1-non-negotiable-Right-now_1767182218545.txt  Pasted-1-Hackathon-Preview-Section-Implementation-Add-a-small-_1767713290712.txt  Pasted-1-Image-SEO-Optimization-All-Pages-Images-are-critical-_1768234922929.txt  Pasted-1-Layered-Depth-Main-Technique-Instead-of-relying-on-a-_1767725432554.txt  Pasted-1-Overall-Principles-White-Space-Generous-padding-and-m_1765298522041.txt  Pasted-CORTEX-LINUX-Open-Source-Hackathon-2026-AI-Powered-Pack_1767720580908.txt  Pasted-Cortex-Linux-Hackathon-2026-Legal-Issues-Participant-Co_1768241843276.txt  Pasted-CortexLinux-com-A-B-Testing-Roadmap-1-Goals-of-A-B-Test_1768234035505.txt  Pasted-I-ll-be-very-concrete-and-actionable-now-based-on-what-_1767182237316.txt  Pasted-Implement-a-Why-Cortex-Exists-mission-layer-across-Cort_1768230566359.txt  Pasted-OK-Replit-AI-here-are-competitor-and-industry-standard-_1765800043791.txt  Pasted-Replit-AI-Prompt-Cortex-Linux-Landing-Page-Part-2-of-4-PART-2-Hero-Section-Statistics-Hero-Se-1762780961780_1762780961781.txt  Pasted-Replit-AI-Prompt-Cortex-Linux-Landing-Page-Part-4-of-4-PART-4-Join-Section-Sponsor-Section-Co-1762781016465_1762781016466.txt  Pasted-The-AI-That-Understands-You-section-of-the-Cortex-Linux_1765299829311.txt  Pasted-The-current-hackathon-preview-card-UI-is-visually-weak-_1767716382317.txt  (+28 more)
cxlinux/CortexLinuxcom-Website/Projects/hrm-ai/: Cargo.toml
cxlinux/CortexLinuxcom-Website/Projects/hrm-ai/src/: hire.rs  lib.rs  theme.rs  types.rs
cxlinux/CortexLinuxcom-Website/cxlinux/cortex-network/: README.md  pyproject.toml
cxlinux/CortexLinuxcom-Website/cxlinux/cortex-network/src/cortex_network/: __init__.py
cxlinux/CortexLinuxcom-Website/cxlinux/cortex-network/src/cortex_network/core/: output.py
cxlinux/CortexLinuxcom-Website/cxlinux/cortex-network/src/cortex_network/modules/: __init__.py  dns.py  firewall.py  status.py  vpn.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-ops/: .env.example  CONTRIBUTING.md  README.md  pyproject.toml
cxlinux/CortexLinuxcom-Website/cxlinux/cx-ops/cx_ops/: __init__.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-ops/cx_ops/config/: __init__.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-ops/cx_ops/connectors/: __init__.py  anthropic.py  openai.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-ops/cx_ops/doctor/: reporter.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-ops/cx_ops/plugins/: base.py  loader.py  registry.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-ops/cx_ops/repair/: __init__.py  permissions.py  services.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-ops/cx_ops/updates/: __init__.py  checker.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-ops/cx_ops/utils/: __init__.py  system.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-ops/tests/: __init__.py  test_connectors.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-stacks/: CODE_OF_CONDUCT.md  pyproject.toml
cxlinux/CortexLinuxcom-Website/cxlinux/cx-stacks/.github/ISSUE_TEMPLATE/: bug_report.md
cxlinux/CortexLinuxcom-Website/cxlinux/cx-stacks/cx_stacks/: __init__.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-stacks/cx_stacks/docker/: __init__.py  compose.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-stacks/cx_stacks/provisioner/: __init__.py  configurator.py  installer.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-stacks/cx_stacks/proxy/: caddy.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-stacks/cx_stacks/stacks/: ghost.py  node.py  python.py  wordpress.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-stacks/cx_stacks/templates/nginx/: php.conf.j2  proxy.conf.j2
cxlinux/CortexLinuxcom-Website/cxlinux/cx-stacks/cx_stacks/templates/systemd/: uvicorn.service.j2
cxlinux/CortexLinuxcom-Website/cxlinux/cx-stacks/cx_stacks/utils/: __init__.py
cxlinux/CortexLinuxcom-Website/cxlinux/cx-stacks/tests/: __init__.py  test_config.py  test_docker.py  test_stacks.py
cxlinux/cortex-cli/: pyproject.toml
cxlinux/cortex-cli/cx/: cli.py
cxlinux/cortex-llm/: CONTRIBUTING.md  SECURITY.md  pyproject.toml
cxlinux/cortex-llm/cortex_llm/: __init__.py
cxlinux/cortex-llm/cortex_llm/hardware/: detector.py  rocm.py
cxlinux/cortex-llm/cortex_llm/inference/: context.py
cxlinux/cortex-llm/cortex_llm/models/: __init__.py  validator.py
cxlinux/cortex-llm/cortex_llm/server/: __init__.py  app.py  middleware.py
cxlinux/cortex-llm/cortex_llm/utils/: __init__.py  system.py
cxlinux/cortex-llm/tests/: test_inference.py
(+768 files in other folders)
