[package]
name = "hrm-ai"
version = "0.1.0"
authors = ["CX Linux <support@cxlinux.com>"]
edition = "2021"
description = "HRM AI - Premium Human Resource Management with AI Agent Deployment"

# BSL 1.1 License Protection
license = "BSL-1.1"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
termcolor = "1.1"
thiserror = "1.0"